feat: Se sue validacion con gate
